--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -135,7 +135,7 @@ nav li:hover {
 }
 
 .merchant-dashboard-page {
-  text-align: center;
+  /* text-align: center; */
   font-size: 18px;
   font-family: 'Josefin Sans', sans-serif;
 
@@ -185,17 +185,24 @@ section a {
 /*Styling for item index page */
 
 .col.invoice-index {
-  margin-left: 2%;
+  /* margin-left: 2%; */
 }
 .row.invoice-index {
-  margin-right: 2%;
+  /* margin-right: 2%; */
   outline-style: dotted;
   outline-color: #c9e4ca;
 }
 .invoice-index-body {
   vertical-align: center;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 a#invoice-link.badge{
   padding: 20px;
   font-size: 16px;
+}
+
+a.btn.btn-info{
+  margin-right: 5%;
+
 }
