--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -2,22 +2,21 @@
   <h1 class="index-title"style="margin:5%">Edit <%= @item.title %>:</h1>
 </section>
 <form class='edit-item' action='/items/<%= @item.id %>' method='POST'>
-  <p>Merchant</br>
-     <select>
-      <%@merchants.each do |merchant|%>
-        <option value="<%=merchant.id%>"><%=merchant.name%></option>
-      <%end%>
-    </select>
-  </p></br>
-  <p>Title</br>
+  <h3>Merchant</h3>
+  <select>
+    <%@merchants.each do |merchant|%>
+      <option value="<%=merchant.id%>"><%=merchant.name%></option>
+    <%end%>
+  </select>
+  <h3>Title</h3>
   <input type='hidden' name='_method' value='PUT'>
-  <textarea name='item[title]'><%= @item.title %></textarea></p></br>
-  <p>Description</br>
-  <textarea name='item[description]'><%= @item.description %></textarea></p><br/>
-  <p>Price</br>
-  <input type='text' name='item[price]' value='<%= @item.unit_price %>'></p></br>
-  <p>Image URL</br>
-  <input type='text' name='item[image]' value='<%= @item.image %>'></br></br></br>
-  <input type='submit' value='Update Item'></p></br>
+  <textarea name='item[title]'><%= @item.title %></textarea>
+  <h3>Description</h3>
+  <textarea name='item[description]'><%= @item.description %></textarea>
+  <h3>Price</h3>
+  <input type='text' name='item[price]' value='<%= @item.unit_price %>'>
+  <h3>Image URL</h3>
+  <input type='text' name='item[image]' value='<%= @item.image %>'>
+  <input type='submit' value='Update Item'>
 </form>
 <form action="/items"><input type="submit" value="Cancel"></form>
