--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -220,11 +220,13 @@ h3 {
 .edit-square {
   background: #DFEBE4;
   padding: 5% 10%;
-
 }
 .edit-body textarea {
-  /* padding: 5% 3%; */
   padding: 20px 3%;
+}
+.green-line {
+  outline-style: solid;
+  outline-color: #87bba2;
 }
 .edit-body input {
   padding: 10px 10px;
@@ -232,4 +234,7 @@ h3 {
 form .edit-item {
   margin-left: 5%;
   margin-right: 5%;
+}
+.row.edit-buttons {
+  margin-top: 5%;
 }
