--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -12,13 +12,13 @@
       </select>
       <h3>Title</h3>
       <input type='hidden' name='_method' value='PUT'>
-      <textarea rows='1' cols='65' name='item[title]'><%= @item.title %></textarea>
+      <textarea rows='1' cols='65' class='green-line' name='item[title]'><%= @item.title %></textarea>
       <h3>Description</h3>
-      <textarea rows='5' cols='65' name='item[description]'><%= @item.description %></textarea>
+      <textarea rows='5' cols='65' class='green-line' name='item[description]'><%= @item.description %></textarea>
       <h3>Price</h3>
-      <input type='text' name='item[unit_price]' value='<%= @item.unit_price %>'>
+      <input type='text' class='green-line' name='item[unit_price]' value='<%= @item.unit_price %>'>
       <h3>Image URL</h3>
-      <input type='text' name='item[image]' value='<%= @item.image %>'>
+      <input type='text' class='green-line' name='item[image]' value='<%= @item.image %>'>
       <div class='row edit-buttons'>
         <div class='col'>
           <input type='submit' value='Update Item'>
