--- a/app/views/merchants/show.erb
+++ b/app/views/merchants/show.erb
@@ -1,11 +1,3 @@
-<!-- <section class="index">
-  <section class="jumbotron text-center" style="margin-bottom:5%">
-    <a href="/items-dashboard" class="dashboard-link">Dashboard</a>
-    <h1 class="index-title"style="margin:5%">Items</h1>
-    <a href="/merchants/new" class="btn btn-info">Create A New Item</a>
-  </section>
-
-_______________________________ -->
 <section class="index">
   <section class="jumbotron text-center" style="margin-bottom:5%">
     <h1 class="index-title"style="margin:5%"><%= @merchant.name %></h1>
@@ -18,12 +10,14 @@ _______________________________ -->
   </section>
   <section>
     <% @merchant.items.each do |item| %>
-      <div>
-        <ul>
-          <li><img src='<%= item.image %>'></li>
-          <li><a href="/items/<%=item.id%>"><%=item.title%></a></li>
-          <li>$ <%='%.2f' % item.unit_price%></li>
-        </ul>
+      <div class="item-container">
+        <div>
+          <ul>
+            <li><img src='<%= item.image %>'></li>
+            <li><a href="/items/<%=item.id%>"><%=item.title.truncate_words(2)%></a></li>
+            <li>$ <%='%.2f' % item.unit_price%></li>
+          </ul>
+        </div>
       </div>
     <% end %>
   </section>
