--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -202,10 +202,6 @@ a#invoice-link.badge{
   font-size: 16px;
 }
 
-a.btn.btn-info{
-  margin-right: 5%;
-
-}
 /* Item Edit page styling */
 h3 {
   padding: 20px 0px;
@@ -237,4 +233,22 @@ form .edit-item {
 }
 .row.edit-buttons {
   margin-top: 5%;
+}
+
+.input-form {
+  width: 100%;
+  text-align: center;
+}
+
+.input-form label {
+  font-size: 18px;
+}
+
+.input-form input[type=text] {
+  padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #364958;
+    border-radius: 4px;
+    font-size: 18px;
 }
