--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -3,12 +3,22 @@
     <h1 class="index-title"style="margin:5%">Edit <%= @merchant.name %></h1>
   </section>
 
-  <form action="/merchants/<%= @merchant.id %>" method="POST">
-    <h1>Edit <%= @merchant.name %></h1>
-    <input type="hidden" name="_method" value="PUT">
-    <label>Name</label><br>
-    <input type="text" name="merchant[name]" placeholder="<%= @merchant.name %>"><br>
-    <input type="submit" value="Edit Merchant"><br>
-  </form>
-    <a href="/merchants"><button>Cancel</button></a>
+  <div class="input-form">
+    <form action="/merchants/<%= @merchant.id %>" method="POST">
+      <input type="hidden" name="_method" value="PUT">
+      <label>Name</label>
+      <input type="text" name="merchant[name]" placeholder="<%= @merchant.name %>">
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <input class='btn btn-info' type="submit" value="Update Merchant">
+    </form>
+    <br>
+    <br>
+    <form action="/merchants">
+      <button type='submit' id="delete-btn" class="btn">Cancel</button>
+    </form>
+  </div>
 </section>
