--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -1,34 +1,21 @@
-<!-- <section class="new-page">
-  <section class="jumbotron text-center" style="margin-bottom:5%">
-    <h1 class="new-title" style="margin:5%">Create New Merchant:</h1>
-  </section>
-  <div class= "container text-center">
-    <div class="row justify-content-around">
-      <div class="col">
-        <form action="/merchants" method="post">
-          <label>Name</label>
-          <input type='text' name='merchant[name]' placeholder="Henry's Cafe"/><br>
-          <button type='submit' class='btn btn-info'>Create Merchant</button>
-        </form>
-      </div>
-      <div class="col">
-        <form action="/merchants">
-          <button type='submit' id="delete-btn" class="btn">Cancel</button>
-        </form>
-      </div>
-    </div>
-</div>
-</section> -->
 <section class="new-page">
   <section class="jumbotron text-center" style="margin-bottom:5%">
     <h1 class="new-title" style="margin:5%">Create New Merchant:</h1>
   </section>
+  <div class="input-form">
     <form action="/merchants" method="post">
       <label>Name</label>
-      <input type='text' name='merchant[name]' placeholder="Henry's Cafe"/><br>
+      <input type='text' name='merchant[name]' placeholder="Enter New Merchant"/>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <button type='submit' class='btn btn-info'>Create Merchant</button>
     </form>
+    <br>
     <form action="/merchants">
       <button type='submit' id="delete-btn" class="btn">Cancel</button>
     </form>
+  </div>
 </section>
