--- a/app/views/invoices/invoices-dashboard.erb
+++ b/app/views/invoices/invoices-dashboard.erb
@@ -15,6 +15,6 @@
   <div class="box-3">
       <h5>Quantity </h5>
       <h5>Highest Invoice: <a href="/invoices/<%= @highest_quantity_invoices%>"><%= @highest_quantity_invoices %> </a></h5>
-      <h5>Lowest Invoice: <a href="/invoices/<%= @lowest_quantity_invoice%>"><%= @lowest_quantity_invoices  %> </a></h5>
+      <h5>Lowest Invoice: <a href="/invoices/<%= @lowest_quantity_invoices%>"><%= @lowest_quantity_invoices  %> </a></h5>
   </div>
 </section>
