--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -2,14 +2,14 @@
   <h1 class="index-title"style="margin:5%">Items Dashboard</h1>
 </section>
 <section class="dashboard-columns">
-  <div class="col-1">
+  <div class="cols-1">
     <h5>Total Item Count: <%= @total_item_count %></h5>
   </div>
-  <div class="col-2">
+  <div class="cols-2">
     <h5>Avg Price Per Item:</h5>
     <h5>$ <%= @average_unit_price.round(2) %></h5>
   </div>
-  <div class="col-3">
+  <div class="cols-3">
     <h5>Item By Age:</h5>
     <h5>Newest</h5>
       <ul>
