begin styling item rows on invoice show page

--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -285,9 +285,25 @@ form .edit-item {
   height: 100%;
   margin-right: 0;
 }
+
 h2 {
   padding: 20px 0px;
   font-size: 25px;
   text-align: center;
 
+}
+/* #invoices-show-body {
+  margin-left: 5%;
+  margin-right: 5%;
+} */
+.row.invoices-show {
+  /* margin-left: 5%;
+  margin-right: 5%; */
+  /* margin-right: 2%; */
+  outline-style: dotted;
+  outline-color: #c9e4ca;
+  margin-bottom: 5%;
+}
+.col.invoices-show {
+  /* margin-left: 2%; */
 }
