--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -1,4 +1,4 @@
-<section">
+<section>
   <section class="jumbotron text-center">
     <h1 class="show-title" style="margin:5%">Invoice: <%=@invoice.id%> - <%=@invoice.status%></h1>
     <form action="/invoices/<%= @invoice.id %>" method="POST">
@@ -12,25 +12,27 @@
         </div>
       </div>
     </form>
+  </section>
 
 
-</section>
-  <h2><a href="/merchants/<%= @invoice.merchant_id %>" class="badge" id="merchant-link"><%= @merchant.first.name %></h2>
-    <% @invoice.invoice_items.each do |invoice_item| %>
-    <div class="row invoice-item-index">
-      <div class="col invoice-item-index">
-        <a href="/items/<%= invoice_item.item.id %>" class="badge" id="item-link"> <%= invoice_item.item.title %> </a>
+  <section id="invoices-show-body">
+    <h2><a href="/merchants/<%= @invoice.merchant_id %>" class="badge" id="merchant-link"><%= @merchant.first.name %></a></h2>
+      <% @invoice.invoice_items.each do |invoice_item| %>
+      <div class="row invoices-show">
+        <div class="col invoices-show">
+          <a href="/items/<%= invoice_item.item.id %>"> <%= invoice_item.item.id%> </a>
+        </div>
+        <div class="col invoices-show">
+          <%= invoice_item.item.title %>
+        </div>
+        <div class="col invoices-show">
+          <%= invoice_item.quantity %>
+        </div>
+        <div class="col invoices-show">
+          <%= invoice_item.item.unit_price %>
+        </div>
       </div>
-      <div class="col-1 invoice-item-index">
-        <%= invoice_item.item.title %>
-      </div>
-      <div class="col-1 invoice-item-index">
-        <%= invoice_item.quantity %>
-      </div>
-      <div class="col-1 invoice-item-index">
-        <%= invoice_item.item.unit_price %>
-      </div>
+      <% end %>
     </div>
-    <% end %>
-  </div>
+  </section>
 </section>
