changes link to create a new item from items page.

--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -2,7 +2,7 @@
   <section class="jumbotron text-center" style="margin-bottom:5%">
     <a href="/items-dashboard" class="dashboard-link">Dashboard</a>
     <h1 class="index-title"style="margin:5%">Items</h1>
-    <a href="/merchants/new" class="btn btn-info">Create A New Item</a>
+    <a href="/items/new" class="btn btn-info">Create A New Item</a>
   </section>
 
 
