--- a/app/views/invoices/invoices-dashboard.erb
+++ b/app/views/invoices/invoices-dashboard.erb
@@ -14,7 +14,7 @@
     <h5>Highest Invoice: <a href="/invoices/<%= @highest_price_invoice%>"><%= @highest_price_invoice %></a> </h5>
     <h5>Lowest Invoice: <a href="/invoices/<%= @lowest_price_invoice%>"><%= @lowest_price_invoice %></a> </h5>
   </div>
-  <div class="col-3">
+  <div class="cols-3">
       <h5>Quantity </h5>
       <h5>Highest Invoice: <a href="/invoices/<%= @highest_quantity_invoices%>"><%= @highest_quantity_invoices %> </a></h5>
       <h5>Lowest Invoice: <a href="/invoices/<%= @lowest_quantity_invoices%>"><%= @lowest_quantity_invoices  %> </a></h5>
