--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -290,20 +290,15 @@ h2 {
   padding: 20px 0px;
   font-size: 25px;
   text-align: center;
-
+  margin-bottom: 5%;
 }
-/* #invoices-show-body {
-  margin-left: 5%;
-  margin-right: 5%;
-} */
+#invoices-show-body {
+  margin-left: 10%;
+  margin-right: 10%;
+}
 .row.invoices-show {
-  /* margin-left: 5%;
-  margin-right: 5%; */
-  /* margin-right: 2%; */
+  padding: 1% 2%;
   outline-style: dotted;
   outline-color: #c9e4ca;
   margin-bottom: 5%;
-}
-.col.invoices-show {
-  /* margin-left: 2%; */
 }
