final touches invoices show page

--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -1,5 +1,5 @@
 <section>
-  <section class="jumbotron text-center">
+  <section class="jumbotron text-center less-pad">
     <h1 class="show-title" style="margin:5%">Invoice: <%=@invoice.id%> - <%=@invoice.status%></h1>
     <form action="/invoices/<%= @invoice.id %>" method="POST">
       <div class="row show-buttons">
