--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -22,10 +22,10 @@
       <input type='text' class='green-line' name='item[image]' value='<%= @item.image %>'>
       <div class='row edit-buttons'>
         <div class='col'>
-          <input type='submit' value='Update Item'>
+          <input type='submit' value='Update Item' class='btn btn-info' class='btn edit'>
         </div>
         <div class='col'>
-          <form action="/items"><input type="submit" value="Cancel"></form>
+          <form action="/items"><input type="submit" value="Cancel" class='btn edit'></form>
         </div>
       </div>
     </form>
