--- a/app/views/items/show.erb
+++ b/app/views/items/show.erb
@@ -1,19 +1,21 @@
-<h1 class="title"><%= @item.title %></h1>
+<section class="index">
+  <section class="jumbotron text-center" style="margin-bottom:5%">
+    <h1 class="title"><%= @item.title %></h1>
 
-  <form action="/items/<%= @item.id %>/edit" method="GET">
-    <input type="hidden" name="_method" value="EDIT">
-    <input type="submit" value="Edit">
-  </form>
+    <form action="/items/<%= @item.id %>/edit" method="GET">
+      <input type="hidden" name="_method" value="EDIT">
+      <input type="submit" value="Edit">
+    </form>
 
-  <form action="/items/<%= @item.id %>" method="POST">
-    <input type="hidden" name="_method" value="DELETE">
-    <input class="delete-button" type="submit" value="Delete">
-  </form>
-
-  <ul>
-    <li><a href="/merchants/<%=@item.merchant.id%>"><%= @item.merchant.name %></a></li>
-    <li><img src='<%= @item.image %>' alt="placeholder_image" class="image-size"></li>
-    <li><%= @item.title %></li>
-    <li>$ <%= '%.2f' % @item.unit_price %></li>
-    <li><%= @item.description %></li>
-  </ul>
+    <form action="/items/<%= @item.id %>" method="POST">
+      <input type="hidden" name="_method" value="DELETE">
+      <input class="delete-button" type="submit" value="Delete">
+    </form>
+  </section>
+    <ul>
+      <li><a href="/merchants/<%=@item.merchant.id%>"><%= @item.merchant.name %></a></li>
+      <li><img src='<%= @item.image %>' alt="placeholder_image" class="image-size"></li>
+      <li><%= @item.title %></li>
+      <li>$ <%= '%.2f' % @item.unit_price %></li>
+      <li><%= @item.description %></li>
+    </ul>
