--- a/app/views/items/show.erb
+++ b/app/views/items/show.erb
@@ -7,7 +7,7 @@
       <input type="submit" value="Edit">
     </form>
 
-    <form action="/items/<%= @item.id %>" method="POST">
+    <form class="btn btn-info" action="/items/<%= @item.id %>" method="POST">
       <input type="hidden" name="_method" value="DELETE">
       <input class="delete-button" type="submit" value="Delete">
     </form>
