--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -1,22 +1,31 @@
-<p>Create New Item:</p>
-
-  <form class='edit-item' action='/items' method='POST'>
-    <p>Merchant</br>
-      <!-- need to make drop-down menu here -->
-      <%@merchants.each do |merchant|%>
-      <option value="<%=merchant.id%>"><%=merchant.name%></option>
-      <%end%>
-    </p></br>
+<section class="jumbotron text-center" style="margin-bottom:5%">
+  <h1 class="index-title"style="margin:5%">Create New Item</h1>
+</section>
+  <div class="edit-square">
+    <form class='edit-item' action='/items' method='POST'>
+      <h3>Merchant</h3>
+      <select id="merchant-dropdown", name='merchant_id', type='text'>
+        <%@merchants.each do |merchant|%>
+          <option value="<%=merchant.id%>"><%=merchant.name%></option>
+        <%end%>`
+      </select>
     <p>Title</br>
-    <input type='hidden' name='_method' value='POST'>
-    <textarea name='item[title]'></textarea></p></br>
-    <p>Description</br>
-    <textarea name='item[description]'></textarea></p><br/>
-    <p>Price</br>
-    <input type='text' name='item[price]'></p></br>
-    <p>Image URL</br>
-    <input type='text' name='item[image]'</br></br></br>
-    <input type='submit' value='Create'></p></br>
-  </form>
-  <form action="/items"><input type="submit" value="Cancel"></form>
-
+      <input type='hidden' name='_method' value='POST'>
+        <textarea rows='1' cols='60' class='green-line' name='item[title]'><%= @item.title %></textarea>
+      <h3>Description</h3>
+        <textarea rows='5' cols='60' class='green-line' name='item[description]'><%= @item.description %></textarea>
+      <h3>Price</h3>
+        <input type='text' class='green-line' name='item[unit_price]' value='<%= @item.unit_price %>'>
+      <h3>Image URL</h3>
+        <input type='text' class='green-line' name='item[image]' value='<%= @item.image %>'>
+      <div class='row edit-buttons'>
+        <div class='col'>
+          <input type='submit' value='Create' class='btn btn-info' class='btn edit'>
+        </div>
+        <div class='col'>
+          <input type="reset" value="Cancel" class='btn edit'>
+        </div>
+      </div>
+    </form>
+  </div>
+</section>
