adding flexboxes to invoices dashboard.

--- a/app/views/invoices/invoices-dashboard.erb
+++ b/app/views/invoices/invoices-dashboard.erb
@@ -2,7 +2,7 @@
   <h1 class="index-title"style="margin:5%">Invoices Dashboard</h1>
 </section>
 
-<section class="merchant-cubes">
+<section class="merchant-cubes" class="flexy">
   <div class="merchant-container">
     <h5>Status Percentages </h5>
     <h5>Pending <%= @percent_pending %> %</h5>
