--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -25,7 +25,7 @@
           <input type='submit' value='Update Item' class='btn btn-info' class='btn edit'>
         </div>
         <div class='col'>
-          <form action="/items"><input type="reset" value="Cancel" class='btn edit'></form>
+          <form action="/items"><input type="submit" value="Cancel" class='btn edit'></form>
         </div>
       </div>
     </form>
