fixes styling for dashboard pages.

--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -272,3 +272,10 @@ form .edit-item {
     font-size: 18px;
 }
 /* Item dashboard styling*/
+
+.flexy {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
