--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center" style="margin-bottom:5%">
   <h1 class="index-title"style="margin:5%">Items Dashboard</h1>
 </section>
-<section class="merchant-cubes">
+<section class="merchant-cubes" class="flexy">
   <div class="merchant-container">
     <h5>Total Item Count: <%= @total_item_count %></h5>
   </div>
