--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -287,7 +287,7 @@ form .edit-item {
   flex-direction: row;
   justify-content: space-around;
   flex-wrap: wrap;
-=======
+}
 /* Invoice Show Page Styling */
 
 
