changes rounding from dashboard in items to item model.

--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="merchant-container">
     <h5>Avg Price Per Item:</h5>
-    <h5>$ <%= @average_unit_price.round(2) %></h5>
+    <h5>$ <%= @average_unit_price %></h5>
   </div>
   <div class="merchant-container">
     <h5>Item By Age:</h5>
