--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -1,6 +1,7 @@
 <section class="jumbotron text-center" style="margin-bottom:5%">
   <h1 class="index-title"style="margin:5%">Create New Item</h1>
 </section>
+<section class="new-item-body">
   <div class="edit-square">
     <form class='edit-item' action='/items' method='POST'>
       <h3>Merchant</h3>
