--- a/app/views/invoices/edit.erb
+++ b/app/views/invoices/edit.erb
@@ -3,7 +3,7 @@
 </section>
 <div class="merchant-container">
   <div class="input-form">
-    <form action="/invoices/<%= @invoice.id %>/edit" method="POST">
+    <form action="/invoices/<%= @invoice.id %>" method="POST">
       <input type="hidden" name="_method" value="PUT">
 
         <label>Merchant</label>
